# ros2-ackermann-racing-navigation

./: .gitignore  README.md  launch_rc_demo.sh  stamper_bridge.sh  teleop_rc.sh
src/rc_model_description/: CMakeLists.txt  package.xml
src/rc_model_description/behavior_trees/: navigate_to_pose_ackermann.xml
src/rc_model_description/config/: controllers.yaml  ekf_imu_odom.yaml  front_direct.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params_rc.yaml  ref_driver.yaml
src/rc_model_description/launch/: corridor_bringup.launch.py  ekf_imu_odom.launch.py  fortress_bringup.launch.py  nav2_rc_bringup.launch.py  slam_localization.launch.py  slam_online.launch.py  view_model.launch.py
src/rc_model_description/maps/: my_corridor.pgm  my_corridor.yaml  my_corridor_slam.data
src/rc_model_description/models/rc_model/: model.config
src/rc_model_description/models/rc_model_description/: model.config
src/rc_model_description/models/rc_model_description/meshes/Transformed/: back_left_wheel.stl  back_left_wheel_collision.stl  back_right_wheel.stl  back_right_wheel_collision.stl  base_link.stl  front_assembly.stl  front_left_wheel.stl  front_left_wheel_collision.stl  front_right_wheel.stl  front_right_wheel_collision.stl  left_motor.stl  left_wheel_mount.stl  right_motor.stl  right_wheel_mount.stl  servo.stl  servo_horn.stl  steering_bar.stl  steering_rod.stl  suspension_axle.stl
src/rc_model_description/rviz/: urdf.rviz
src/rc_model_description/scripts/: spawn_moving_sphere.py
src/rc_model_description/urdf/: camera.xacro  gazebo_control.xacro  joints.xacro  joints_copy.xacro  joints_mimic.xacro  links copy.xacro  links.xacro  materials.xacro  rc_model_ros2.xacro
src/rc_model_description/urdf/backups/: gazebo_control.xacro.backup  gazebo_control_mimic.xacro.backup  rc_model_ros2.xacro.backup
src/rc_model_description/worlds/: my_world.world  narrow_corridor.sdf
src/rc_nav_bridge/: package.xml  setup.cfg  setup.py
src/rc_nav_bridge/config/: stamper.params.yaml
src/rc_nav_bridge/launch/: bridge_only.launch.py  teleop_with_stamper.launch.py
src/rc_nav_bridge/rc_nav_bridge/: __init__.py  stamper.py  world_odom_aligner.py
