<?xml version="1.0"?>
<package format="3">
  <name>rc_nav_bridge</name>
  <version>0.1.0</version>
  <description>Twist → TwistStamped bridge and launch glue for Ackermann controller + Nav2.</description>

  <maintainer email="nishantpushparaju@gmail.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Python build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Only needed for the teleop launch -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
